test/parsetest/invalid/function_calls1.java

class foo {
  public void a() {
    foo(a(a,a0);
  }
}
